# x3d_mcp

./: CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
docs/: ModelContextProtocolForMachineAidedX3dAuthoring.docx  x3d-file-structure.md  x3d-tools-and-references.md
src/: server.py
src/tools/: animate.py  convert.py  granular.py  prompts.py  query.py  render.py  scene_ops.py  validate_tool.py
src/validation/: autofix.py  semantic.py  validate.py
src/validation/schemas/: x3d-4.1.xsd
src/x3d_utils/: scene.py  source.py
tests/: test_animate.py  test_autofix.py  test_prompts.py  test_render.py  test_scene.py  test_scene_ops.py  test_semantic.py  test_source.py  test_tools.py  test_tooltips.py  test_validation.py  test_x3duom.py
tests/fixtures/: HelloWorld.json
